<resources>
    <string name="app_name">TD4 - les activites</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de pass</string>
    <string name="action_sign_in">LogIn</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Email invalide</string>
    <string name="invalid_password">Mot de passe superieur à 5 caractères</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_et_ou_password_invalide">Login et/ou password invalide</string>
    <string name="details">Details</string>
    <string name="logout">logout</string>
    <string name="news">News</string>
    <string name="ok">Ok</string>
    <string name="login">LogIn</string>
    <string name="prompt_pseudo">Votre Pseudo</string>
    <string name="faut_logger">Faut logger</string>
    <string name="about">About</string>
</resources>